--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     />
     <title>Herry</title>
   </head>
-  <body>
+  <body style="background:#f3f3f3">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
